syntax = "proto3";
package api;

import "google/protobuf/any.proto";

// Action Wrapper
// There is a `call_tcx_api` method in tcx which act as a endpoint like RPC. It accepts a `TcxAction` param which method field is
// the real action and param field is the real param of that method.
// When an error occurred, the `call_tcx_api` will return a `Response` which isSuccess field be false and error field is the reason
// which cause the error.
message TcxAction {
    string method = 1;
    google.protobuf.Any param = 2;
}

// A common response when error occurred.
message GeneralResult {
    bool isSuccess = 1;
    string error = 2;
}

/// Initialization

// FUNCTION: init_token_core_x(InitTokenCoreXParam)
//
// initialize tcx by passing keystore folder and xpub encryption params
message InitTokenCoreXParam {
    string fileDir = 1;
    string xpubCommonKey = 2;
    string xpubCommonIv = 3;
    bool isDebug = 4;
}

message SignHashesParam {
    string id = 1;
    string password = 2;
    message DataToSign {
        string hash = 1;
        string path = 2;
        string curve = 3;
        string sigAlg = 4;
    }
    repeated DataToSign dataToSign = 3;
}

message SignHashesResult {
    repeated string signatures = 1;
}

message SignParamPoc {
    
    string hash = 3;
    string derivationPath = 4;
}

message SignResultPoc {
    string signature = 1;
}

message PublicKeyDerivation {
    string chainType = 1;
    string path = 2;
    string curve = 3;
}

message GetPublicKeysParam {
    string id = 1;
    string password = 2;
    repeated PublicKeyDerivation derivations = 3;
}

message GetPublicKeysResult {
   repeated string publicKeys = 1;
}

message GetExtendedPublicKeysParam {
    string id = 1;
    string password = 2;
    repeated PublicKeyDerivation derivations = 3;
}

message GetExtendedPublicKeysResult {
    repeated string extendedPublicKeys = 1;
}


//
//// FUNCTION: export_private_key(ExportPrivateKeyParam): ExportResult
////
//// export the private key from a private key keystore or a hd keystore
message ExportPrivateKeyParam {
    string id = 1;
    string password = 2;
    string chainType = 3;
    string network = 4;
    string curve = 5;
    string path = 6;
}

//
//// FUNCTION: export_private_key(ExportPrivateKeyParam): ExportResult
////
//// export the private key from a private key keystore or a hd keystore
message ExportJsonParam {
    string id = 1;
    string password = 2;
    string chainType = 3;
    string path = 4;
}
//
///// Keystore Common
//
//// FUNCTION: verify_password(WalletKeyParam) -> Response
////
//// verify the password of the keystore
message WalletKeyParam {
    string id = 1;
    string password = 2;
}

